--- a/src/kerone_demo/Main_Frame.form
+++ b/src/kerone_demo/Main_Frame.form
@@ -113,6 +113,9 @@
                 </Property>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
